--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,8 @@
         "lex.h": "c",
         "*.tcc": "c",
         "random": "c",
-        "limits": "c"
+        "limits": "c",
+        "parser.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
